js262/test/language/module-code/parse-err-decl-pos-import-labeled.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

test262: import v from './decl-pos-import-labeled.js';
